AC_INIT([LINKS], [2.0.1], [rwarren@bcgsc.ca])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/main.cpp])


# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

AC_SUBST(AM_CXXFLAGS, '-std=c++11')

AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
